# globcpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
src/: Glob.cpp  Glob.h  main.cpp
tests/: CMakeLists.txt  GlobTest.cpp  gtest.cmake
